# Change Log
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).


## Unreleased
### Added
- 200 Character limit messaging in alert form for description

## 0.1.1
### Added
- [Precss](https://github.com/jonathantneal/precss) for stylesheets
- Help page form for providers
- Help page with basic info for advocates
- Send resolution messages once all needs have been resolved

### Changed
- HOST_NAME is now SERVER_NAME in the config

### Fixed
- Reset Password Link in emails
- Admins can view alert responses
- Mobile dropdown menu
- Mobile formatting of wide tables, forms and pages
- Support IE