@@ -9,8 +9,11 @@ import {
     UserFormPage
 } from 'pages/admin';
 
-// TODO: refactor pages into structure based on API, not roles
-import { ViewResponsesPage } from 'pages/advocate';
+import {
+    ResolveNeedPage,
+    ViewResponsesPage
+} from 'pages/advocate';
+
 
 const childRoutes = [
     { path: '/'                  , component: AdminAlertHistoryPage },
@@ -29,7 +32,8 @@ const childRoutes = [
     { path: '/edit-category/:id' , component: CategoryFormPage },
     { path: '/edit-service/:id'  , component: ServiceFormPage },
 
-    { path: '/view-responses/:id' , component: ViewResponsesPage}
+    { path: '/resolve-need/:id'   , component: ResolveNeedPage },
+    { path: '/view-responses/:id' , component: ViewResponsesPage }
 ]
 
 export default { childRoutes }
